--- a/scripts/package.json
+++ b/scripts/package.json
@@ -1,9 +1,10 @@
 {
-    "dependencies": {
-        "sf-core": "^2.0.0",
-        "js-base": "1.0.4",
-        "@smartface/styler": "^1.0.0",
-        "@smartface/contx": "1.0.0-rc.14",
-        "sf-extension-utils": "^3.2.1"
-    }
+  "dependencies": {
+    "@smartface/contx": "1.0.0-rc.14",
+    "@smartface/styler": "^1.0.0",
+    "js-base": "1.0.4",
+    "sf-core": "^2.0.0",
+    "sf-extension-utils": "^3.2.1",
+    "sf-plugin-facebook": "^1.2.0"
+  }
 }
