--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -3,9 +3,10 @@
 		"theme": {
 			"currentTheme": "Defaults",
 			"themes": [
-				"Defaults"
+				"Defaults",
+				"smartminerTheme"
 			]
 		},
-		"version": "6.5.3"
+		"version": "6.5.3-rc.16"
 	}
 }
